# bundler

./: .EditorConfig  .gitignore  .gitmodules  CNAME  Justfile  LICENSE  README.md  Readme.md  angular.json  build.ts  bundler.sln  chunk-0sgx9g1x.css  chunk-318rz18z.js  chunk-58988q0m.css  chunk-6m9wxyvf.js  chunk-7qgtssfq.css  chunk-8e9y7q0k.js  chunk-a8vr61wb.js  chunk-b2e3j8y0.js  chunk-d2s4tw5j.js  chunk-jmdq2yn0.css  chunk-m56b7gkj.css  chunk-rbryrmax.js  chunk-xf1tpf1n.css  chunk-y3g1hsnd.js  chunk-zqdd2mn2.js  config.json  config.py  console.py  error.py  index.html  main.py  modes.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  schema.json  todo.md  (+1 more)
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: CI.yaml  build.yml  deploy.yml  maintenance.yml  python-test.yml  regression.yml
Bundler.Client/: .browserslistrc  .gitignore  CHANGELOG.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
Bundler.Client/src/: App.tsx  dbutils.ts  error.ts  main.tsx  supportedBrowsers.ts
Bundler.Client/src/classes/: Bundle.ts  (+1 more)
Bundler.QA/: Bundler.QA.csproj  package.json  playwright.config.ts  utility.ts
Bundler.QA/Backend/: BundlerAPITest.cs
Bundler.QA/Common/: Assets.cs  BaseTest.cs  Config.cs
Bundler.QA/Frontend/: BundlerPage.cs  BundlerTest.cs  WebDriver.cs
Bundler.QA/Resources/: lovebrew.toml  yeetus.txt
Bundler.QA/tests/: bundle.spec.ts  compile.spec.ts  font-upload.spec.ts  texture-upload.spec.ts
Bundler.Server/: Bundler.Server.csproj  Logger.cs  Program.cs  ResourceDownloader.cs  appsettings.json  bundler.Server.http  packages.lock.json
Bundler.Server/Controllers/: BundlerCompilerController.cs  BundlerConvertController.cs  BundlerInfoController.cs
Bundler.Server/Models/: BundlerData.cs  BundlerInfo.cs  BundlerMediaFile.cs  BundlerQuery.cs
Bundler.Server/Properties/: launchSettings.json
backend/: Cargo.toml
backend/src/: main.rs
backend/src/common/: config.rs  logger.rs
backend/src/controllers/: info.rs  mod.rs
backend/src/enums/: console.rs  mod.rs
backend/src/modules/: environment.rs  filesystem.rs  github_assets.rs  mod.rs
backend/src/traits/: convertible.rs
backend/src/types/: mod.rs  texture.rs
backend/src/types/console/: cafe.rs  ctr.rs  hac.rs
bundler/: __init__.py  config.py  error.py  logger.py
bundler.Server/: Bundler.Server.csproj
bundler/services/: command.py  compile.py  conversion.py
client/: README.md  build.ts  bun-env.d.ts  bunfig.toml  package-lock.json  package.json  tsconfig.json
client/src/: app.tsx  db.ts  error.ts  index.tsx  result.ts  types.ts  upload.tsx
consoles/: cafe.py  ctr.py  hac.py
frontend/: copy-build-assets.js  error.html  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: error.html
frontend/src/: App.css  App.tsx  dbutils.ts  error.ts  index.css  supportedBrowsers.ts  types.ts  utility.ts
lovebrew/: __init__.py  command.py  config.py  console.py  error.py  logfile.py  media.py  modes.py  process.py
lovebrew/consoles/: cafe.py  ctr.py  hac.py
lovebrew/static/: lovebrew.toml
public/: config.json
server/: Cargo.toml  Cross.toml  package.json
server/src/: cors.rs  log4rs.yml  main.rs  resources.toml  tools.rs
server/src/common/: config.rs  logger.rs
server/src/controllers/: compile.rs  convert.rs  health.rs  mod.rs
server/src/enums/: api_error.rs
server/src/logging/: message.rs  mod.rs  tracefile.rs
server/src/models/: mod.rs  query.rs  response.rs  target.rs
server/src/modules/: environment.rs  github_assets.rs
server/src/services/: github.rs  mod.rs  resource.rs
server/src/traits/: binary.rs  mod.rs  processable.rs
server/src/types/: apierror.rs  bundler_query.rs  error.rs  font.rs  icon.rs  mod.rs  texture.rs  zipfile.rs
server/src/types/binary/: ctr.rs  mod.rs
server/src/types/console/: mod.rs
server/src/utilities/: form.rs  mod.rs  tracefile.rs
src/: app.tsx  assets.d.ts  config.ts  db.ts  index.html  index.tsx  main.ts  maintenance.ts  messages.ts  types.ts
src/app/: app.config.ts  app.css  app.html  app.ts  maintenance.ts  toast.ts
src/classes/: Asset.ts  Bundle.ts  Config.ts  Ignore.ts  Zipfile.ts
src/components/: DropZone.tsx  Footer.tsx  Link.tsx  MaintenanceGate.tsx  Overlay.tsx
src/enums/: error.ts  target.ts
src/environments/: environment.prod.ts  environment.ts
src/hooks/: useBundlerAPIStatus.ts  useMaintenance.ts
src/services/: CompileService.ts  api.ts  database.ts  maintenance.ts  upload.ts  zip.ts
src/styles/: flask.css  index.css  loader.css  overlay.css  toast.css
static/: lovebrew.toml
static/javascript/: upload.js
static/styles/: alert.css  index.css
templates/: index.html
test/: conftest.py  test_process.py  test_process_cafe.py  test_process_ctr.py  test_process_hac.py  test_root.py
test/data/: main.lua  readme.txt
test/resources/: bad_config.toml  icon48.t3x  lovebrew.toml
testing/: config.ts  eslint.config.js  package-lock.json  playwright.config.ts  utility.ts
testing/classes/: Bundle.ts  zip.ts
testing/pages/: index.ts
tests/: conftest.py  data.py  pytest.ini  resource.py
tests/backend/: test_backend.py
tests/common/: data.json  utility.py
tests/frontend/: config.toml  driver.py  test_frontend.py
(+89 files in other folders)
