[project]
name = "LOVEBrew"
description = "A web application to build your LOVE Potion projects"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "flask-cors",
    "waitress",
    "pyopenssl",
    "requests",
    "filetype",
    "semver",
    "hurry.filesize",
    "toml",
    "python-magic",
    "python-magic-bin",
    "pillow",
]
version = "0.9.0"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"lovebrew.static" = ["**"]
"lovebrew.bin" = ["*.elf", "*.jpg", "*.png", "*.romfs", "*.gsh"]

[project.urls]
Donate = "https://paypal.me/TurtleP"
"Source Code" = "https://github.com/lovebrew/lovebrew-webserver/"
"Issue Tracker" = "https://github.com/lovebrew/lovebrew-webserver/issues/"
