[project]
name = "bundler"
description = "A web application to build your LOVE Potion projects"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "flask-cors",
    "waitress",
    "pyopenssl",
    "requests",
    "filetype",
    "semver",
    "hurry.filesize",
    "toml",
    "pillow",
]
version = "0.10.0"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"bundler.static" = ["**"]
"bundler.bin" = ["*.elf", "*.jpg", "*.png", "*.romfs", "*.gsh"]

[project.urls]
Donate = "https://paypal.me/TurtleP"
"Source Code" = "https://github.com/lovebrew/bundler/"
"Issue Tracker" = "https://github.com/lovebrew/bundler/issues/"
