[project]
name = "bundler"
description = "A web application to build your LOVE Potion projects"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "flask-cors",
    "waitress",
    "pyopenssl",
    "requests",
    "semver",
    "hurry.filesize",
    "toml",
    "get-image-size@git+https://github.com/scardine/image_size",
    "aenum",
    "python-magic-bin; platform_system=='Windows'",
    "python-magic; platform_system!='Windows'",
]
version = "0.10.0"

[project.optional-dependencies]
dev = ["pytest", "selenium"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"bundler.static" = ["**"]
"bundler.bin" = ["*.elf", "*.jpg", "*.png", "*.romfs", "*.gsh"]

[project.urls]
Donate = "https://paypal.me/TurtleP"
"Source Code" = "https://github.com/lovebrew/bundler/"
"Issue Tracker" = "https://github.com/lovebrew/bundler/issues/"
