[package]
name = "bundler-rs"
version = "0.12.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.9", features = ["multipart"] }
base64 = "0.22.1"
bytesize = "1.3.0"
bytesize-serde = "0.2.1"
chrono = { version = "0.4.39", features = ["clock", "serde"] }
dotenv = "0.15.0"
flexi_logger = "0.29.7"
image = { version = "0.25.5", features = ["png", "jpeg"] }
log = "0.4.22"
octocrab = "0.42.1"
reqwest = { version = "0.12.9", features = ["rustls-tls", "blocking"] }
rustls = "0.23.23"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
tempfile = "3.14.0"
tokio = { version = "1.36", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "process",
    "signal",
] }
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
ttf-parser = "0.25.1"
which = "7.0.0"
zip = "2.2.1"

[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
