[package]
name = "bundler"
version = "0.12.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.7.9", features = ["multipart"] }
axum-embed = "0.1.0"
base64 = "0.22.1"
bytesize = "1.3.0"
bytesize-serde = "0.2.1"
chrono = { version = "0.4.39", features = ["clock", "serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
image = { version = "0.25.5", features = ["png", "jpeg"] }
log = "0.4.22"
log4rs = "1.3.0"
octocrab = "0.42.1"
reqwest = { version = "0.12.9", features = ["rustls-tls", "blocking"] }
rust-embed = "8.7.1"
rustls = "0.23.23"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
serde_yaml = "0.9.34"
tempfile = "3.14.0"
tokio = { version = "1.36", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "process",
    "signal",
] }
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
ttf-parser = "0.25.1"
which = "7.0.0"
zip = "2.2.1"

[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
