[package]
name = "bundler"
version = "0.12.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
image = { version = "0.25.6", features = ["jpeg", "png"] }
log = "0.4.27"
log4rs = "1.3.0"
octocrab = "0.44.1"
reqwest = "0.12.18"
rocket = "0.5.1"
rocket_cors = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tempfile = "3.20.0"
thiserror = "2.0.12"
ttf-parser = "0.25.1"
which = "7.0.3"
zip = "4.0.0"


[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
